in cl/1923143003 (landed 5/4/2016) I mistakenly change the value of SET_STATE_OPTIONS from 1 to 0. Need to change it back to 1 before the next release.

BUG=612558

Review-Url: https://codereview.chromium.org/1983133003
Cr-Commit-Position: refs/heads/master@{#394301}

Former-commit-id: 4bda0372b8eae09293604a98c0c96b74ed23c4bf